# clinic

./: .gitignore  CMakeLists.txt  README.md  makefile  spec.json
approot/: composer.xml  strings.xml  templates.xml
docroot/css/: adminstyle.css  composer.css  style.css
docroot/resources/themes/bootstrap/2/: bootstrap.css  wt.css
docroot/resources/themes/bootstrap/3/: wt.css
documentation/: NewSleepStudyProcess.dia  NewSleepStudyProcess.dia.autosave
dumps/: clinicore-1-13-2016.dmp  clinicore-1-14-2016.dmp  clinicore-1-31-2016-dev.dmp  clinicore-1-31-2016-new.dmp  clinicore-1-31-2016.dmp  clinicore-2-4-2016.dmp  clinicore-4-15-2016.dmp  clinicore-4-20-2016.dmp  clinicore-4-21-2016.dmp  clinicore-4-28-2016.dmp  clinicore-5-2-2016.dmp  clinicore-5-23-2016.dmp  clinicore-7-8-2016-live.dmp  clinicore-7-8-2016.dmp  clinicore-8-1-2016.dmp  clinicore-8-2-2016-2.dmp  clinicore-8-2-2016.dmp  clinicore-8-30-dev.dmp  clinicore-dev-4-15.dmp  clinicore-dev-8-1-2016.dmp  clinicore-migration-progress.dmp  clinicore-upgrade-4-15-2016.dmp  clinicore-upgrade-4-21-2016.dmp  clinicore-upgrade-5-2-2016.dmp  clinicore-upgrade-5-23-2016.dmp  clinicore-visit-count.dmp  clinicore-visit-issue-2.dmp  clinicore-visit-issue.dmp
source/: Address.h  AdminApp.cpp  AdminApp.h  AdminAppTemplate.cpp  AdminAppTemplate.h  AdminHomeWidget.cpp  AdminHomeWidget.h  AdminInsuranceWidget.cpp  AdminInsuranceWidget.h  AdminLoginTemplate.cpp  AdminLoginTemplate.h  AdminMapWidget.cpp  AdminMapWidget.h  AdminPhysicianIssueWidget.cpp  AdminPhysicianIssueWidget.h  AdminPhysicianVisitWidget.cpp  AdminPhysicianVisitWidget.h  AdminPracticeCountWidget.cpp  AdminPracticeCountWidget.h  AdminPreMapWidget.cpp  AdminPreMapWidget.h  AdminReferralWidget.cpp  AdminReferralWidget.h  AdminShiftNoteWidget.cpp  AdminShiftNoteWidget.h  Attachment.h  AttachmentEdit.cpp  AttachmentEdit.h  AttachmentResource.cpp  Backup.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarContainerWidget.cpp  CalendarContainerWidget.h  CalendarDay.cpp  CalendarDay.h  CalendarEvent.cpp  CalendarEvent.h  CalendarWeek.cpp  (+225 more)
stubs/: AuthInfo  InsuranceSelection  StudyTypeSelection.stub  dboModifyEntity.stub  insuranceSelection.stub
stubs/sql/: addresstable.sql
