SET(CLINICORE_SOURCE
AdminApp.cpp
AdminAppTemplate.cpp
AdminHomeWidget.cpp
AdminInsuranceWidget.cpp
AdminLoginTemplate.cpp
AdminMapWidget.cpp
AdminPhysicianIssueWidget.cpp
AdminPhysicianVisitWidget.cpp
AdminPracticeCountWidget.cpp
AdminPreMapWidget.cpp
AdminReferralWidget.cpp
AdminShiftNoteWidget.cpp
AttachmentEdit.cpp
AttachmentResource.cpp
Calendar.cpp
CalendarContainerWidget.cpp
CalendarDay.cpp
CalendarEvent.cpp
CalendarWeek.cpp
Composer.cpp
CompositeEntity.cpp
DowneyTechApp.cpp
InboundContainerWidget.cpp
InsuranceFormResource.cpp
InsuranceGroupListContainerWidget.cpp
InsuranceGroupListWidget.cpp
InsuranceListContainerWidget.cpp
InsuranceResultWidget.cpp
LocalityListContainerWidget.cpp
LocalityReferralCountWidget.cpp
LongBeachTechApp.cpp
MarketingApp.cpp
MarketingAdminApp.cpp
MarketingHomeWidget.cpp
MarketingLocalityListWidget.cpp
MarketingPhysicianIssueWidget.cpp
MarketingPhysicianReportWidget.cpp
MarketingPhysicianVisitWidget.cpp
MarketingPracticeGroupWidget.cpp
MarketingPracticeWidget.cpp
MarketingReferralWidget.cpp
MarketingVisitReportWidget.cpp
Option.cpp
OptionList.cpp
PatientListContainerWidget.cpp
PccPhysicianReportWidget.cpp
PccReferralWidget.cpp
PccSleepStudyWidget.cpp
PccVisitReportWidget.cpp
PhysicianAddressListWidget.cpp
PhysicianAddressListContainerWidget.cpp
PhysicianDetailsModel.cpp
PhysicianIssueResultWidget.cpp
PhysicianRecordListContainerWidget.cpp
PhysicianRegistrationModel.cpp
PhysicianRegistrationWidget.cpp
PhysicianVisitResultWidget.cpp
Practice.cpp
PracticeApp.cpp
PracticeAppTemplate.cpp
PracticeAuthWidget.cpp
PracticeDetailsModel.cpp
PracticeGroupListContainerWidget.cpp
PracticeHomeWidget.cpp
PracticeListContainerWidget.cpp
PracticeLoginTemplate.cpp
PracticeLostPasswordWidget.cpp
PracticeOrderWidget.cpp
PracticePreReferralWidget.cpp
PracticeRecentWidget.cpp
PracticeReferralModel.cpp
PracticeReferralView.cpp
PracticeReferralWidget.cpp
PracticeRegistrationView.cpp
PracticeReportWidget.cpp
PracticeSession.cpp
PracticeSettingsWidget.cpp
PracticeStudyProgressWidget.cpp
PracticeUpdatePasswordWidget.cpp
ReferralResource.cpp
ReferralResultWidget.cpp
SleepStudyListContainerWidget.cpp
StaffApp.cpp
StaffAppTemplate.cpp
StaffBackupListWidget.cpp
StaffCancellationWidget.cpp
StaffHomeWidget.cpp
StaffInboundWidget.cpp
StaffInsuranceListWidget.cpp
StaffLoginTemplate.cpp
StaffPatientWidget.cpp
StaffPracticeWidget.cpp
StaffReferralWidget.cpp
StaffReportWidget.cpp
StaffReschedulePatientWidget.cpp
StaffSleepCalendarWidget.cpp
StaffSleepStudyWidget.cpp
StaffStudyOrderWidget.cpp
StaffStudyTypeWidget.cpp
StudyAttachmentEdit.cpp
StudyComposer.cpp
StudyTypeListContainerWidget.cpp
TechApp.cpp
TechBackupListWidget.cpp
TechHomeWidget.cpp
TechShiftNoteWidget.cpp
TechSleepStudyWidget.cpp
TechStudyListWidget.cpp
UserSession.cpp
clinicore.cpp
)

SET(LIBRARIES
${MY_WT}
${HARU_LIB}
boost_random
boost_regex
boost_signals
boost_system
pthread
boost_thread
boost_filesystem
boost_program_options
boost_date_time
restclient-cpp
jsoncpp
curl
jsonrpccpp-common
jsonrpccpp-client
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

SET(CLINICORE_TARGET clinicore.wt)

ADD_EXECUTABLE(${CLINICORE_TARGET} ${CLINICORE_SOURCE})

TARGET_LINK_LIBRARIES(${CLINICORE_TARGET} ${WT_CONNECTOR} ${LIBRARIES})
